hphp/hack/test/typecheck/expression_trees/nested_splicing2.php.exp
File "nested_splicing2.php", line 6, characters 14-17:
Splice syntax `${...}` cannot be nested. (Parsing[1002])
